<resources>
    <string name="app_name">SchoolChat</string>
    <string name="action_settings">Settings</string>


    <!--textos para loginactivity-->
    <string name="title_LogIn">Incio de sesión</string>
    <string name="login">Entrar</string>
    <string name="registro">Registrar</string>
    <string name="email">email</string>
    <string name="password">password</string>


    <!--textos para la actividad alatausuario-->
    <string name="title_Altausuario">Nuevo Usuario</string>
    <string name="textDefCorreo">Correo electronico</string>
    <string name="textDefNomUsu">Nombre de Usuario</string>
    <string name="textDefContr">Contraseña</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="textContrVerif">Verificacion</string>

    <string name="CorrectoProf">Profesor nuevo creado.</string>

    <string name="errorVerif">La contraseña de verificacion no es correcta. Vuelva a intentarlo.</string>


    <string-array name="Curso">
        <item>1ºDAM</item>
        <item>2ºDAM</item>
        <item>1ºASIR</item>
        <item>2ºASIR</item>
    </string-array>

    <!--textos para difusión-->
    <string name="title_difusion">Mensaje de difusión</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
