<?xml version="1.0" encoding="utf-8"?>
<TabHost
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tabHost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/alumnos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/ed_Email"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/textDefCorreo"
                    android:layout_marginTop="50dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_NombreUsuario"
                    android:hint="@string/textDefNomUsu"
                    android:layout_below="@+id/ed_Email"
                    android:layout_alignLeft="@+id/ed_Email"
                    android:layout_alignStart="@+id/ed_Email"
                    android:layout_marginTop="30dp"
                    android:layout_alignRight="@+id/ed_Email"
                    android:layout_alignEnd="@+id/ed_Email" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/ed_Contraseña"
                    android:hint="@string/textDefContr"
                    android:layout_below="@+id/ed_NombreUsuario"
                    android:layout_alignLeft="@+id/ed_NombreUsuario"
                    android:layout_alignStart="@+id/ed_NombreUsuario"
                    android:layout_marginTop="30dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_Registrarse"
                    android:text="@string/registro"
                    android:layout_below="@+id/ed_Contraseña"
                    android:layout_toLeftOf="@+id/bt_Cancelar"
                    android:layout_toStartOf="@+id/bt_Cancelar"
                    android:layout_marginTop="38dp"
                    android:onClick="onSign"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profesores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/ed_EmailProfe"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/textDefCorreo"
                    android:layout_marginTop="50dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_NombreProfe"
                    android:hint="@string/textDefNomUsu"
                    android:layout_below="@+id/ed_Email"
                    android:layout_alignLeft="@+id/ed_Email"
                    android:layout_alignStart="@+id/ed_Email"
                    android:layout_marginTop="30dp"
                    android:layout_alignRight="@+id/ed_Email"
                    android:layout_alignEnd="@+id/ed_Email" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/ed_ContraseñaProfe"
                    android:hint="@string/textDefContr"
                    android:layout_below="@+id/ed_NombreUsuario"
                    android:layout_alignLeft="@+id/ed_NombreUsuario"
                    android:layout_alignStart="@+id/ed_NombreUsuario"
                    android:layout_marginTop="30dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_RegistrarseProfe"
                    android:text="@string/registro"
                    android:layout_below="@+id/ed_Contraseña"
                    android:layout_toLeftOf="@+id/bt_Cancelar"
                    android:layout_toStartOf="@+id/bt_Cancelar"
                    android:layout_marginTop="38dp"
                    android:onClick="onSignProfe"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/administracion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/ed_EmailAdmin"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/textDefCorreo"
                    android:layout_marginTop="50dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_NombreAdmin"
                    android:hint="@string/textDefNomUsu"
                    android:layout_below="@+id/ed_Email"
                    android:layout_alignLeft="@+id/ed_Email"
                    android:layout_alignStart="@+id/ed_Email"
                    android:layout_marginTop="30dp"
                    android:layout_alignRight="@+id/ed_Email"
                    android:layout_alignEnd="@+id/ed_Email" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/ed_ContraseñaAdmin"
                    android:hint="@string/textDefContr"
                    android:layout_below="@+id/ed_NombreUsuario"
                    android:layout_alignLeft="@+id/ed_NombreUsuario"
                    android:layout_alignStart="@+id/ed_NombreUsuario"
                    android:layout_marginTop="30dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_RegistrarseAdmin"
                    android:text="@string/registro"
                    android:layout_below="@+id/ed_Contraseña"
                    android:layout_toLeftOf="@+id/bt_Cancelar"
                    android:layout_toStartOf="@+id/bt_Cancelar"
                    android:layout_marginTop="38dp"
                    android:onClick="onSignAdmin"/>
            </LinearLayout>
        </FrameLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonCancelar"
            android:id="@+id/bt_Cancelar"
            android:onClick="onCancelar"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>
</TabHost>
